objects/Delete_After__c.object
<CustomObject>
    <fields>
        <fullName>Days__c</fullName>
        <description>This field is used to store the day count after which the file would be deleted in rackspace.</description>
        <inlineHelpText>Enter the  day count after which the file would be deleted in rackspace.</inlineHelpText>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Words__c</fullName>
        <description>This field is used to specify the number of days after which the file gets deleted in rackspace.
Value for this field is used in Terms and Conditions.</description>
        <label>Days in Words</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Attachment_Days__c</fullName>
        <label>Investigation Attachment Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>